// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action.Task #insertPrev insert to children 1 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -51,19 +51,19 @@
        \\"startedAt\\": 2018-10-22T16:46:32.613Z,
      },
      Object {
        \\"description\\": \\"\\",
        \\"finishedAt\\": 2018-10-23T16:46:32.613Z,
-       \\"id\\": \\"3\\",
+       \\"id\\": \\"4\\",
        \\"name\\": \\"default task name\\",
        \\"parentId\\": \\"2\\",
        \\"startedAt\\": 2018-10-22T16:46:32.613Z,
      },
      Object {
        \\"description\\": \\"\\",
        \\"finishedAt\\": 2018-10-23T16:46:32.613Z,
-       \\"id\\": \\"4\\",
+       \\"id\\": \\"3\\",
        \\"name\\": \\"default task name\\",
        \\"parentId\\": \\"2\\",
        \\"startedAt\\": 2018-10-22T16:46:32.613Z,
      },
      Object {"
`;

exports[`Action.Task #insertPrev insert to children 2 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -37,19 +37,20 @@
    },
    \\"tasks\\": Array [
      Object {
        \\"description\\": \\"\\",
        \\"finishedAt\\": 2018-10-23T16:46:32.630Z,
-       \\"id\\": \\"1\\",
+       \\"id\\": \\"2\\",
        \\"name\\": \\"default task name\\",
        \\"startedAt\\": 2018-10-22T16:46:32.630Z,
      },
      Object {
        \\"description\\": \\"\\",
        \\"finishedAt\\": 2018-10-23T16:46:32.630Z,
-       \\"id\\": \\"2\\",
+       \\"id\\": \\"1\\",
        \\"name\\": \\"default task name\\",
+       \\"parentId\\": \\"2\\",
        \\"startedAt\\": 2018-10-22T16:46:32.630Z,
      },
      Object {
        \\"description\\": \\"\\",
        \\"finishedAt\\": 2018-10-23T16:46:32.630Z,"
`;

exports[`Action.Task #insertPrev insert to children 2 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -37,35 +37,36 @@
    },
    \\"tasks\\": Array [
      Object {
        \\"description\\": \\"\\",
        \\"finishedAt\\": 2018-10-23T16:46:32.634Z,
-       \\"id\\": \\"1\\",
+       \\"id\\": \\"2\\",
        \\"name\\": \\"default task name\\",
        \\"startedAt\\": 2018-10-22T16:46:32.634Z,
      },
      Object {
        \\"description\\": \\"\\",
        \\"finishedAt\\": 2018-10-23T16:46:32.634Z,
-       \\"id\\": \\"2\\",
+       \\"id\\": \\"3\\",
        \\"name\\": \\"default task name\\",
+       \\"parentId\\": \\"2\\",
        \\"startedAt\\": 2018-10-22T16:46:32.634Z,
      },
      Object {
        \\"description\\": \\"\\",
        \\"finishedAt\\": 2018-10-23T16:46:32.634Z,
-       \\"id\\": \\"3\\",
+       \\"id\\": \\"4\\",
        \\"name\\": \\"default task name\\",
        \\"parentId\\": \\"2\\",
        \\"startedAt\\": 2018-10-22T16:46:32.634Z,
      },
      Object {
        \\"description\\": \\"\\",
        \\"finishedAt\\": 2018-10-23T16:46:32.634Z,
-       \\"id\\": \\"4\\",
+       \\"id\\": \\"1\\",
        \\"name\\": \\"default task name\\",
-       \\"parentId\\": \\"2\\",
+       \\"parentId\\": undefined,
        \\"startedAt\\": 2018-10-22T16:46:32.634Z,
      },
      Object {
        \\"description\\": \\"\\",
        \\"finishedAt\\": 2018-10-23T16:46:32.634Z,"
`;
